fix: faq on mobile devices

--- a/src/main/resources/assets/styles/parts/_faq.scss
+++ b/src/main/resources/assets/styles/parts/_faq.scss
@@ -27,23 +27,31 @@ div[itemprop="mainEntity"] {
 
   & label {
     & [itemprop="name"] {
-      height: 50px;
+      min-height: 50px;
       border-top-left-radius: 3px;
       border-top-right-radius: 3px;
       background-color: var(--lib-color-header-100);
       padding-left: 15px;
       padding-right: 15px;
+
       align-items: center;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
 
       & h2, & h3 {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
         font-style: normal;
         font-weight: 500;
         font-size: 17px;
         line-height: 20px;
         margin-block: 0px;
+        margin-right: 5px;
+        column-gap: 15px;
+        padding-top: 10px;
+        padding-bottom: 10px;
 
         color: var(--lib-color-primary-100);
       }
